[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/balls/ball.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/balls/basic_ball/basic_ball.gd" type="Script" id=2]
[ext_resource path="res://sprites/ball.png" type="Texture" id=3]

[node name="basic_ball" index="0" instance=ExtResource( 1 )]
contact_monitor = true
linear_velocity = Vector2( 10, 30 )
script = ExtResource( 2 )

[node name="ball" type="Sprite" parent="." index="1"]
texture = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_ball_body_entered"]
[connection signal="tween_completed" from="effect" to="." method="_on_effect_tween_completed"]
[connection signal="tween_started" from="effect" to="." method="_on_effect_tween_started"]
